[gd_scene load_steps=2 format=3 uid="uid://bbji6vq43gec1"]

[ext_resource type="Script" uid="uid://cq01jak85omea" path="res://scripts/CategoryManagementDialog.gd" id="1_rgi3f"]

[node name="CategoryManagementDialog" type="Window"]
title = "Category Management Dialog"
size = Vector2i(300, 600)
popup_window = true
min_size = Vector2i(300, 600)
script = ExtResource("1_rgi3f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="List" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CategoryLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Add"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="RemoveButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Remove"

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Close
"
